# terrazgo

./: .gitignore  .prettierignore  CNAME  Cargo.toml  README.md  clippy.toml  deny.toml  eslint.config.js  index.html  package-lock.json  package.json  privacidad.html  styles.css  vite.config.js
.github/ISSUE_TEMPLATE/: informe-de-error.yml  propuesta-de-mejora.yml
.github/workflows/: build.yml
crates/module-cue/: Cargo.toml
crates/module-cue/examples/: demo.rs
crates/module-cue/migrations/: 0001_schema.sql  0002_seed_reference.sql
crates/module-cue/src/: alerts.rs  db.rs  demo.rs  error.rs  export.rs  lib.rs  models.rs  report.rs  repository.rs  siex.rs
crates/module-cue/src/demo/: recinfo_47_182_0_0_7_14_1.geojson
crates/module-cue/src/export/: descriptor.rs
crates/module-cue/src/repository/: alert.rs  export_alias.rs  lookup.rs  product.rs  treatment.rs
crates/module-cue/templates/: cuaderno.typ
crates/module-cue/tests/: alerts.rs  export.rs  export_alias.rs  migrations.rs  report.rs  repository.rs  siex_mapping.rs
crates/module-sigpac/: Cargo.toml
crates/module-sigpac/src/: client.rs  lib.rs  models.rs  reference.rs  service.rs  storage.rs
crates/module-sigpac/tests/: client.rs  service.rs
crates/module-sigpac/tests/fixtures/: geopackages-listing.html  intersection-fitosanitarios.json  intersection-nitratos.json  recinfo-notfound.geojson  recinfo.geojson  recinfo.json  recinfobypoint.geojson  recinfobypoint.json
crates/terrazgo-core/: Cargo.toml
crates/terrazgo-core/catalogues/: AUTORIZACION_EXCP.csv  BUENAS_PRACTICAS_AMBITOS.csv  CULTIVO_USO_SIGPAC.csv  EFICACIA_TRATAMIENTO.csv  ENFERMEDADES.csv  EST_FENOLOGICO.csv  JUSTIFICACION_ACTUACION.csv  MALAS_HIERBAS.csv  PLAGAS.csv  PRODUCTOS.csv  REGULADORES_CRECIMIENTO.csv  TIPENERGIA.csv  TIPO_MAQUINA_UNE.csv  TIPO_MEDIDA_FITOSANITARIA.csv  TIPO_PRODFITO.csv  UNIDADES_MEDIDA.csv
crates/terrazgo-core/migrations/: 0001_core_schema.sql  0002_seed_countries.sql
crates/terrazgo-core/src/: audit.rs  backup.rs  catalogue.rs  date.rs  db.rs  error.rs  geojson.rs  lib.rs  models.rs  repository.rs  settings.rs
crates/terrazgo-core/src/repository/: country.rs  crop.rs  farm.rs  geo_feature.rs  machinery.rs  operator.rs  season.rs  user_profile.rs  zone_flag.rs
crates/terrazgo-core/tests/: backup.rs  catalogue.rs  migrations.rs  repository.rs
crates/terrazgo-geo/: Cargo.toml
crates/terrazgo-geo/migrations/: 0001_cache_schema.sql
crates/terrazgo-geo/src/: android.rs  db.rs  error.rs  fetch.rs  import.rs  lib.rs  sources.rs  style.rs
crates/terrazgo-geo/tests/: import.rs
crates/terrazgo-report/: Cargo.toml
crates/terrazgo-report/src/: error.rs  lib.rs
crates/terrazgo-report/tests/: render.rs
docs/: agro-data-services.md  architecture.md  backup-restore.md  data-model.md  frontend-conventions.md  maintenance.md  map-data-sources.md  map-layers-roadmap.md  siex-export.md  sigpac-integration.md
docs/references/: cue-schema-3.11.4.json  cue-schema-3.3.0.json
src/: App.svelte  i18n.js  index.html  main.js  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  geo_protocol.rs  lib.rs  main.rs  registry.rs  state.rs  user_files.rs
src-tauri/tests/: command_registration.rs  i18n_contract.rs  migration_composition.rs  spdx_headers.rs
src/i18n/: en.js  es.js
src/lib/: FarmView.svelte  FarmsView.svelte  MapCanvas.svelte  MapView.svelte  NotificationBell.svelte  RegistryMachinery.svelte  RegistryOperators.svelte  RegistryProducts.svelte  RegistryView.svelte  SettingsProfiles.svelte  SettingsView.svelte  Skeleton.svelte  StatusView.svelte  TreatmentForm.svelte  TreatmentsView.svelte  backend.js  mapLayers.js  nav.js  notifications.svelte.js
