[package]
name = "terrazgo-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Terrazgo core — shared data entities (farm, plot), record_change audit infrastructure, date utilities and core-owned migrations"

[lints]
workspace = true

# Versions live in [workspace.dependencies] at the repo root.
[dependencies]
rusqlite = { workspace = true }
rusqlite_migration = { workspace = true }
uuid = { workspace = true }
jiff = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
