# SPDX-FileCopyrightText: 2026 Carlos Lozano Ruiz
# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "terrazgo-geo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Terrazgo geo plumbing — tile/resource cache, base-map sources, boundary-file import (no user data, no UI)"

[lints]
workspace = true

# Versions live in [workspace.dependencies] at the repo root.
[dependencies]
terrazgo-core = { workspace = true }
rusqlite = { workspace = true }
rusqlite_migration = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }
geozero = { workspace = true }

# Android-only: lazy platform-verifier initialization before the first fetch
# (see src/android.rs for why it lives at the fetch chokepoint, not startup).
[target.'cfg(target_os = "android")'.dependencies]
jni = { workspace = true }
tao = { workspace = true }
rustls-platform-verifier = { workspace = true }
